# py-starter

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CLAUDE.md  README.md  conftest.py  package.json  pyproject.toml  requirements.txt  shell.nix
.github/workflows/: publish.yml  tests.yml
src/my_package/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
